--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ ollama==0.1.7
 markdown==3.5.1
 python-dateutil==2.8.2
 sentence-transformers==2.2.2
+huggingface-hub==0.16.4
 numpy==1.24.3
 scikit-learn==1.3.0
 rich==13.6.0
